--- a/_posts/2017-3-15-github.md
+++ b/_posts/2017-3-15-github.md
@@ -5,3 +5,7 @@ description: プログラムを公開
 image: assets/images/github.png
 link: https://github.com/ccc-sokon
 ---
+
+- 管理者: システム管理係
+- 編集権限: システム管理係
+- 該当チャンネル: [#ex_system](https://sokon.slack.com/messages/C4KPRMYSU/)
