--- a/_posts/2017-3-17-blog.md
+++ b/_posts/2017-3-17-blog.md
@@ -5,3 +5,7 @@ description: はてなブログ
 image: assets/images/blog.png
 link: http://sokon.hateblo.jp/
 ---
+
+- 管理者: システム管理係
+- 編集権限: 全員
+- 該当チャンネル: [#post_blog](https://sokon.slack.com/messages/C8J4JRZFG/)
