--- a/_posts/2017-3-18-lineat.md
+++ b/_posts/2017-3-18-lineat.md
@@ -5,3 +5,7 @@ description: 新歓用チャットツール
 image: assets/images/lineat.png
 link: https://line.me/R/ti/p/%40luq8751d
 ---
+
+- 管理者: 新歓係
+- 編集権限: システム管理係、新歓係、幹事長、班長
+- 該当チャンネル: [#lineat](https://sokon.slack.com/messages/C4WHRF4FM/)
