--- a/_posts/2017-3-29-slack.md
+++ b/_posts/2017-3-29-slack.md
@@ -5,3 +5,8 @@ description: チャットサービス
 image: assets/images/slack.png
 link: https://sokon.slack.com
 ---
+
+- 管理者: 役職者
+- 該当チャンネル: [#ex_system](https://sokon.slack.com/messages/C4KPRMYSU/)
+
+- Slackに関する質問は [#question](https://sokon.slack.com/messages/C4D11E6L8/) で受け付けます
