--- a/_posts/2017-3-30-hp.md
+++ b/_posts/2017-3-30-hp.md
@@ -5,3 +5,12 @@ description: 公式ホームページ
 image: assets/images/ccc_icon_circle.png
 link: http://sokon.jp
 ---
+
+- 管理者: システム管理係
+- 編集権限: システム管理係
+- 該当チャンネル: [#ex_system](https://sokon.slack.com/messages/C4KPRMYSU/)
+
+- メンバーページも同様
+- ソースコード
+    - [HP](https://github.com/ccc-sokon/homepage)
+    - [メンバーページ](https://github.com/ccc-sokon/members_page)
