--- a/_posts/2017-3-14-youtube.md
+++ b/_posts/2017-3-14-youtube.md
@@ -5,3 +5,7 @@ description: 映像班の制作した動画を公開
 image: assets/images/youtube.png
 link: https://www.youtube.com/channel/UCpNXbl-kSV7yjEuD2bx2Ntw
 ---
+
+- 管理者: 映像班班長
+- 編集権限: 映像班班長、システム管理係
+- 該当チャンネル: [#v_general](https://sokon.slack.com/messages/C4ECQ811V/)
