--- a/_posts/2017-3-16-atnd.md
+++ b/_posts/2017-3-16-atnd.md
@@ -5,3 +5,7 @@ description: 公開イベントを発信
 image: assets/images/atnd.png
 link: https://atnd.org/groups/sokon
 ---
+
+- 管理者: システム管理係
+- 編集権限: 全員
+- 該当チャンネル: [#ex_system](https://sokon.slack.com/messages/C4KPRMYSU/)
