--- a/_posts/2017-3-22-twitter.md
+++ b/_posts/2017-3-22-twitter.md
@@ -5,3 +5,7 @@ description: 公式Twitter
 image: assets/images/twitter.png
 link: https://twitter.com/ccc_sokon
 ---
+
+- 管理者: 書記
+- 編集権限: 書記、システム管理係
+- 該当チャンネル: [#post_twitter](https://sokon.slack.com/messages/C4ZJWNHUK/)_
