--- a/_posts/2017-3-15-atnd_p.md
+++ b/_posts/2017-3-15-atnd_p.md
@@ -6,6 +6,7 @@ image: assets/images/atnd.png
 link: https://atnd.org/groups/sokonp
 ---
 
-- 管理者: システム管理係
-- 編集権限: 全員
+- 運用責任者: プログラミング班班長
+- 運営者: プログラミング班班員
+    - 誰でもイベント作成できます
 - 該当チャンネル: [#ex_system](https://sokon.slack.com/messages/C4KPRMYSU/)
