--- a/_posts/2017-3-17-blog.md
+++ b/_posts/2017-3-17-blog.md
@@ -1,11 +1,12 @@
 ---
 layout: post
 title: Blog
-description: はてなブログ
+description: 外部向けの活動報告ブログ
 image: assets/images/blog.png
 link: http://sokon.hateblo.jp/
 ---
 
-- 管理者: システム管理係
-- 編集権限: 全員
+- 運営責任者: 副書記
+- 運営者: 全員
+    - 誰でも投稿できます
 - 該当チャンネル: [#post_blog](https://sokon.slack.com/messages/C8J4JRZFG/)
