--- a/_posts/2017-3-29-slack.md
+++ b/_posts/2017-3-29-slack.md
@@ -6,7 +6,9 @@ image: assets/images/slack.png
 link: https://sokon.slack.com
 ---
 
-- 管理者: 役職者
+- 運用責任者: システム管理係
+- 運用者: 役職者
 - 該当チャンネル: [#ex_system](https://sokon.slack.com/messages/C4KPRMYSU/)
 
-- Slackに関する質問は [#question](https://sokon.slack.com/messages/C4D11E6L8/) で受け付けます
+- 詳しくは[こちら](https://scrapbox.io/CCC/Slack)
+- Slackに関する質問は [#random](https://sokon.slack.com/messages/C1946DESU/) で受け付けます
