--- a/_posts/2017-3-30-hp.md
+++ b/_posts/2017-3-30-hp.md
@@ -3,14 +3,15 @@ layout: post
 title: HP
 description: 公式ホームページ
 image: assets/images/ccc_icon_circle.png
-link: http://sokon.jp
+link: https://sokon.jp
 ---
 
-- 管理者: システム管理係
-- 編集権限: システム管理係
+- 運用責任者: システム管理係
+- 運用者: 役職者
 - 該当チャンネル: [#ex_system](https://sokon.slack.com/messages/C4KPRMYSU/)
 
 - メンバーページも同様
 - ソースコード
-    - [HP](https://github.com/ccc-sokon/homepage)
-    - [メンバーページ](https://github.com/ccc-sokon/members_page)
+    - [HP](https://github.com/ccc-sokon/ccc-sokon.github.io)
+    - [メンバーページ](https://github.com/sokon-meiji/sokon-meiji.github.io)
+- フレームワーク: [Jekyll](https://jekyllrb-ja.github.io/)
