--- a/_posts/2017-3-12-youtube.md
+++ b/_posts/2017-3-12-youtube.md
@@ -6,6 +6,6 @@ image: assets/images/youtube.png
 link: https://www.youtube.com/channel/UCpNXbl-kSV7yjEuD2bx2Ntw
 ---
 
-- 管理者: 映像班班長
-- 編集権限: 映像班班長、システム管理係
+- 運用責任者: 映像班班長
+- 運用者: 映像班班員
 - 該当チャンネル: [#v_general](https://sokon.slack.com/messages/C4ECQ811V/)
