--- a/_posts/2017-3-14-atnd_v.md
+++ b/_posts/2017-3-14-atnd_v.md
@@ -6,6 +6,7 @@ image: assets/images/atnd.png
 link: https://atnd.org/groups/sokon_v
 ---
 
-- 管理者: システム管理係
-- 編集権限: 全員
+- 運用責任者: 映像班班長
+- 運用者: 映像班班員
+    - 誰でもイベント作成できます
 - 該当チャンネル: [#ex_system](https://sokon.slack.com/messages/C4KPRMYSU/)
