--- a/_posts/2017-3-16-atnd.md
+++ b/_posts/2017-3-16-atnd.md
@@ -6,6 +6,7 @@ image: assets/images/atnd.png
 link: https://atnd.org/groups/sokon
 ---
 
-- 管理者: システム管理係
-- 編集権限: 全員
+- 運用責任者: システム管理係
+- 運営者: 全員
+    - 誰でもイベントを作成できます
 - 該当チャンネル: [#ex_system](https://sokon.slack.com/messages/C4KPRMYSU/)
