--- a/_posts/2017-3-13-github.md
+++ b/_posts/2017-3-13-github.md
@@ -1,11 +1,11 @@
 ---
 layout: post
 title: GitHub
-description: プログラムを公開
+description: 会員のソースコードを公開
 image: assets/images/github.png
 link: https://github.com/ccc-sokon
 ---
 
-- 管理者: システム管理係
-- 編集権限: システム管理係
+- 運用責任者: システム管理係
+- 運用者: プログラミング班班員
 - 該当チャンネル: [#ex_system](https://sokon.slack.com/messages/C4KPRMYSU/)
