change description pages to external pages in scrapbox

--- a/_posts/2017-3-13-github.md
+++ b/_posts/2017-3-13-github.md
@@ -4,8 +4,5 @@ title: GitHub
 description: 会員のソースコードを公開
 image: assets/images/github.png
 link: https://github.com/ccc-sokon
+description_link: https://scrapbox.io/CCC/GitHub
 ---
-
-- 運用責任者: システム管理係
-- 運用者: プログラミング班班員
-- 該当チャンネル: [#ex_system](https://sokon.slack.com/messages/C4KPRMYSU/)
