--- a/_posts/2017-3-14-atnd_v.md
+++ b/_posts/2017-3-14-atnd_v.md
@@ -4,9 +4,5 @@ title: ATND (映像班)
 description: 公開イベントを発信
 image: assets/images/atnd.png
 link: https://atnd.org/groups/sokon_v
+description_link: https://scrapbox.io/CCC/ATND
 ---
-
-- 運用責任者: 映像班班長
-- 運用者: 映像班班員
-    - 誰でもイベント作成できます
-- 該当チャンネル: [#ex_system](https://sokon.slack.com/messages/C4KPRMYSU/)
