--- a/_posts/2017-3-15-atnd_p.md
+++ b/_posts/2017-3-15-atnd_p.md
@@ -4,9 +4,5 @@ title: ATND (プログラミング班)
 description: 公開イベントを発信
 image: assets/images/atnd.png
 link: https://atnd.org/groups/sokonp
+description_link: https://scrapbox.io/CCC/ATND
 ---
-
-- 運用責任者: プログラミング班班長
-- 運営者: プログラミング班班員
-    - 誰でもイベント作成できます
-- 該当チャンネル: [#ex_system](https://sokon.slack.com/messages/C4KPRMYSU/)
