--- a/_posts/2017-3-17-blog.md
+++ b/_posts/2017-3-17-blog.md
@@ -4,9 +4,5 @@ title: Blog
 description: 外部向けの活動報告ブログ
 image: assets/images/blog.png
 link: http://sokon.hateblo.jp/
+description_link: https://scrapbox.io/CCC/%E3%83%96%E3%83%AD%E3%82%B0
 ---
-
-- 運営責任者: 副書記
-- 運営者: 全員
-    - 誰でも投稿できます
-- 該当チャンネル: [#post_blog](https://sokon.slack.com/messages/C8J4JRZFG/)
