--- a/_posts/2017-3-29-slack.md
+++ b/_posts/2017-3-29-slack.md
@@ -4,11 +4,5 @@ title: Slack
 description: チャットサービス
 image: assets/images/slack.png
 link: https://sokon.slack.com
+description_link: https://scrapbox.io/CCC/Slack
 ---
-
-- 運用責任者: システム管理係
-- 運用者: 役職者
-- 該当チャンネル: [#ex_system](https://sokon.slack.com/messages/C4KPRMYSU/)
-
-- 詳しくは[こちら](https://scrapbox.io/CCC/Slack)
-- Slackに関する質問は [#random](https://sokon.slack.com/messages/C1946DESU/) で受け付けます
