--- a/_posts/2017-3-30-hp.md
+++ b/_posts/2017-3-30-hp.md
@@ -4,14 +4,5 @@ title: HP
 description: 公式ホームページ
 image: assets/images/ccc_icon_circle.png
 link: https://sokon.jp
+description_link: https://scrapbox.io/CCC/%E3%83%9B%E3%83%BC%E3%83%A0%E3%83%9A%E3%83%BC%E3%82%B8
 ---
-
-- 運用責任者: システム管理係
-- 運用者: 役職者
-- 該当チャンネル: [#ex_system](https://sokon.slack.com/messages/C4KPRMYSU/)
-
-- メンバーページも同様
-- ソースコード
-    - [HP](https://github.com/ccc-sokon/ccc-sokon.github.io)
-    - [メンバーページ](https://github.com/sokon-meiji/sokon-meiji.github.io)
-- フレームワーク: [Jekyll](https://jekyllrb-ja.github.io/)
