--- a/_posts/2017-3-12-youtube.md
+++ b/_posts/2017-3-12-youtube.md
@@ -1,11 +1,8 @@
 ---
 layout: post
-title: Youtube
+title: YouTube
 description: 映像班の制作した動画を公開
 image: assets/images/youtube.png
 link: https://www.youtube.com/channel/UCpNXbl-kSV7yjEuD2bx2Ntw
+description_link: https://scrapbox.io/CCC/YouTube
 ---
-
-- 運用責任者: 映像班班長
-- 運用者: 映像班班員
-- 該当チャンネル: [#v_general](https://sokon.slack.com/messages/C4ECQ811V/)
