--- a/_posts/2017-3-16-atnd.md
+++ b/_posts/2017-3-16-atnd.md
@@ -4,9 +4,5 @@ title: ATND
 description: 公開イベントを発信
 image: assets/images/atnd.png
 link: https://atnd.org/groups/sokon
+description_link: https://scrapbox.io/CCC/ATND
 ---
-
-- 運用責任者: システム管理係
-- 運営者: 全員
-    - 誰でもイベントを作成できます
-- 該当チャンネル: [#ex_system](https://sokon.slack.com/messages/C4KPRMYSU/)
