--- a/_posts/2017-3-22-twitter.md
+++ b/_posts/2017-3-22-twitter.md
@@ -4,8 +4,5 @@ title: Twitter
 description:
 image: assets/images/twitter.png
 link: https://twitter.com/ccc_sokon
+description_link: https://scrapbox.io/CCC/Twitter
 ---
-
-- 運用責任者: 書記
-- 運用者: 役職者
-- 該当チャンネル: [#post_twitter](https://sokon.slack.com/messages/C4ZJWNHUK/)
